@@ -1,4 +1,6 @@
 {{$NEXT}}
+ - use CONTENT_LENGTH instead of HTTP_CONTENT_LENGTH, more closely
+   following the PSGI spec
 
 1.11      2014-07-29 10:38:26+01:00 Europe/London
  - use SingleEncoding (thanks sergeyromanov)
